# sv0-mcp

./: .gitignore  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
hooks/: post-commit
scripts/: agent-sync.sh  sync-graph.sh
src/sv0_mcp/: __init__.py  cli.py  config.py  progress_dashboard_launcher.py
src/sv0_mcp/extractors/: __init__.py  base.py  directory.py  ebnf.py  markdown.py  rmd.py  sml.py
src/sv0_mcp/graph/: __init__.py  client.py  schema.py  sync.py
src/sv0_mcp/models/: __init__.py  base.py  compiler.py  spec.py  vm.py  workflow.py
src/sv0_mcp/server/: __init__.py  mcp.py
src/sv0_mcp/watchers/: __init__.py  file_watcher.py  git_hooks.py
tests/: conftest.py
tests/test_extractors/: test_directory.py  test_ebnf.py  test_markdown.py  test_rmd.py
tests/test_graph/: test_sync.py
tests/test_models/: test_entities.py
